--- a/.config/i3/config
+++ b/.config/i3/config
@@ -88,7 +88,7 @@ set $inactive-text-color    #6c6f93
 set $urgent-bg-color        #f43e5c
 set $indicator-color        #fab28e
 
-set $border_size 1
+set $border_size 2
 
 # preferred application launcher
 # Note: pass the final command to i3-msg so that the resulting window can be opened
@@ -172,8 +172,8 @@ exec --no-startup-id xinput set-prop "pointer:Logitech MX Master 2S" "libinput N
 for_window [class="^.*"] border pixel $border_size, \
   title_format "<b> %class >> %title </b>"
 
-new_window  normal
-new_float   normal
+default_border pixel $border_size
+default_floating_border pixel $border_size
 
 # hide_edge_borders none|vertical|horizontal|both|smart
 hide_edge_borders smart
