--- a/.config/i3/config
+++ b/.config/i3/config
@@ -179,13 +179,13 @@ default_floating_border pixel $border_size
 hide_edge_borders smart
 
 # window colors
-# client    border    background \
+# class     border      background \
 #   text    indicator
 client.focused            $active-bg-color    $active-bg-color \
   $active-text-color      $indicator-color
-client.unfocused          $inactive-bg-color  $bg-color \
-  $inactive-text-color    $indicator-color
 client.focused_inactive   $inactive-bg-color	$inactive-bg-color \
+  $inactive-text-color    $indicator-color
+client.unfocused          $inactive-bg-color  $bg-color \
   $inactive-text-color    $indicator-color
 client.urgent             $urgent-bg-color    $urgent-bg-color \
   $active-text-color      $indicator-color
@@ -288,16 +288,16 @@ bindsym $mod+Shift+Right    move right  10px
 workspace_auto_back_and_forth yes
 
 # switch to workspace
-bindsym $mod+1 workspace number $ws1
-bindsym $mod+2 workspace number $ws2
-bindsym $mod+3 workspace number $ws3
-bindsym $mod+4 workspace number $ws4
-bindsym $mod+5 workspace number $ws5
-bindsym $mod+6 workspace number $ws6
-bindsym $mod+7 workspace number $ws7
-bindsym $mod+8 workspace number $ws8
-bindsym $mod+9 workspace number $ws9
-bindsym $mod+0 workspace number $ws10
+bindsym $mod+1 workspace $ws1
+bindsym $mod+2 workspace $ws2
+bindsym $mod+3 workspace $ws3
+bindsym $mod+4 workspace $ws4
+bindsym $mod+5 workspace $ws5
+bindsym $mod+6 workspace $ws6
+bindsym $mod+7 workspace $ws7
+bindsym $mod+8 workspace $ws8
+bindsym $mod+9 workspace $ws9
+bindsym $mod+0 workspace $ws10
 
 # switch to next or previous workspace
 bindsym $mod+Mod1+Left workspace prev
