--- a/.config/sway/config
+++ b/.config/sway/config
@@ -413,7 +413,7 @@ bindsym $mod+r mode "resize"
 
 #: Border & Gaps {{{
 
-#TODO:
+# toggle border
 bindsym $mod+Shift+b border toggle
 
 # changing border style
