--- a/.config/i3/config
+++ b/.config/i3/config
@@ -307,14 +307,14 @@ bindsym $mod+\ move workspace to output next
 
 #: Layouts {{{
 
-# split layout
-bindsym $mod+b split h
-bindsym $mod+v split v
+# split vertical|horizontal|toggle
+bindsym $mod+b split horizontal
+bindsym $mod+v split vertical
 
 # switch between layouts
-bindsym $mod+Shift+s layout stacking
-bindsym $mod+Shift+w layout tabbed
-bindsym $mod+Shift+e layout toggle split
+bindsym $mod+s layout stacking
+bindsym $mod+w layout tabbed
+bindsym $mod+e layout toggle split
 
 # make the current focus fullscreen
 bindsym $mod+f fullscreen toggle
