--- a/.config/sway/config
+++ b/.config/sway/config
@@ -332,8 +332,8 @@ bindsym $mod+b splith
 bindsym $mod+v splitv
 
 # switch between layouts
-# bindsym $mod+s layout stacking
-# bindsym $mod+w layout tabbed
+bindsym $mod+s layout stacking
+bindsym $mod+w layout tabbed
 bindsym $mod+e layout toggle split
 
 # make the current focus fullscreen
