Enable super+r to exit resize mode

--- a/.config/sway/config
+++ b/.config/sway/config
@@ -387,7 +387,7 @@ mode "resize" {
   # back to default mode
   bindsym Return mode "default"
   bindsym Escape mode "default"
-  # bindsym $mod+r mode "default"
+  bindsym $mod+r mode "default"
 }
 
 bindsym $mod+r mode "resize"
