--- a/.config/sway/config
+++ b/.config/sway/config
@@ -473,7 +473,8 @@ assign [class="(?i)(?:firefox)"] \
   $ws2
 
 for_window [class="(?i)(?:spotify)"] \
-  move --no-auto-back-and-forth to workspace $ws10
+  title_format "<b>%title</b>" \
+  move --no-auto-back-and-forth to workspace number $ws10
 
 for_window [app_id="(?i)(?:keepassxc)"] \
   move --no-auto-back-and-forth to workspace $ws9
