--- a/.config/sway/config
+++ b/.config/sway/config
@@ -492,7 +492,7 @@ for_window [window_role="(?i)(?:about|pop-up|setup)"] \
 
 for_window [title="Android Emulator"] \
   floating enable
-# GOG Games installer
+# GOG installer
 for_window [class="(?i)(?:mojosetup)"] \
   floating enable
 # Flameshot
