--- a/.config/sway/config
+++ b/.config/sway/config
@@ -500,7 +500,7 @@ for_window [class="(?i)(?:flameshot)"] \
   floating enable
 #Ulauncher
 for_window [class="(?i)(?:ulauncher)"] \
-  floating enable, focus
+  border none, floating enable
 
 popup_during_fullscreen smart
 
