--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -86,7 +86,7 @@ shadow-exclude = [
 
 # Fade windows in/out when opening/closing and when opacity changes,
 #  unless no-fading-openclose is used.
-fading = true;
+fading = false;
 
 # Opacity change between steps while fading in. (0.01 - 1.0, default 0.028)
 fade-in-step = 0.028;
@@ -111,10 +111,10 @@ fade-delta = 5;
 # Transparency / Opacity {{{
 
 # Opacity of inactive windows. (0.1 - 1.0, default 1.0)
-inactive-opacity = 0.7;
+inactive-opacity = 0.9;
 
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
-frame-opacity = 0.7;
+frame-opacity = 0.8;
 
 # Let inactive opacity set by -i override the '_NET_WM_OPACITY' values of windows.
 inactive-opacity-override = false;
