--- a/.config/i3/config
+++ b/.config/i3/config
@@ -140,8 +140,8 @@ exec --no-startup-id xinput set-prop "SynPS/2 Synaptics TouchPad" "libinput Natu
 exec --no-startup-id xinput set-prop "SynPS/2 Synaptics TouchPad" "libinput Middle Emulation Enabled" 1
 
 # MX Master 2S
-exec --no-startup-id xinput set-prop "pointer:Logitech MX Master 2S" "Device Enabled" 1
-exec --no-startup-id xinput set-prop "pointer:Logitech MX Master 2S" "libinput Natural Scrolling Enabled" 1
+exec_always --no-startup-id xinput set-prop "pointer:Logitech MX Master 2S" "Device Enabled" 1
+exec_always --no-startup-id xinput set-prop "pointer:Logitech MX Master 2S" "libinput Natural Scrolling Enabled" 1
 
 #: }}}
 
