--- a/.config/i3/config
+++ b/.config/i3/config
@@ -399,10 +399,10 @@ bindsym $mod+Shift+b border toggle
 #: Media control {{{
 
 # audio
-bindsym XF86AudioMute           exec amixer set Master toggle
-bindsym XF86AudioMicMute        exec amixer set Capture toggle
-bindsym XF86AudioRaiseVolume    exec amixer set Master 2.5%+,5%+;
-bindsym XF86AudioLowerVolume    exec amixer set Master 2.5%-,5%-;
+bindsym XF86AudioMute           exec "amixer set Master toggle"
+bindsym XF86AudioMicMute        exec "amixer set Capture toggle"
+bindsym XF86AudioRaiseVolume    exec "amixer set Master 2.5%+"
+bindsym XF86AudioLowerVolume    exec "amixer set Master 2.5%-"
 
 # play/pause keys for spotify
 bindsym XF86AudioPlay exec dbus-send --print-reply --dest=org.mpris.MediaPlayer2.spotify /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player.PlayPause
@@ -414,8 +414,8 @@ bindsym XF86AudioPrev exec dbus-send --print-reply --dest=org.mpris.MediaPlayer2
 #: Misc {{{
 
 # backlight
-bindsym XF86MonBrightnessUp     exec --no-startup-id xbacklight -inc 10 ; exec --no-startup-id notify-send 'Brightness UP' -u low"
-bindsym XF86MonBrightnessDown   exec --no-startup-id xbacklight -dec 10 ; exec --no-startup-id notify-send 'Brightness DOWN' -u low"
+bindsym XF86MonBrightnessUp     exec --no-startup-id "xbacklight -inc 10 && notify-send 'Brightness UP' -u low"
+bindsym XF86MonBrightnessDown   exec --no-startup-id "xbacklight -dec 10 && notify-send 'Brightness DOWN' -u low"
 
 # screenshot
 bindsym Print exec --no-startup-id "flameshot gui -p $HOME/Pictures"
