--- a/.config/sway/config
+++ b/.config/sway/config
@@ -14,7 +14,7 @@
 # run with reload: exec_always
 
 # polkit
-exec --no-startup-id /usr/bin/lxpolkit &
+exec --no-startup-id /usr/bin/lxpolkit
 
 # desktop notification
 exec --no-startup-id /usr/bin/dunst
@@ -434,11 +434,11 @@ bindsym XF86AudioPrev exec dbus-send --print-reply --dest=org.mpris.MediaPlayer2
 #: Misc {{{
 
 # backlight
-bindsym XF86MonBrightnessUp     exec --no-startup-id light -A 10 && notify-send 'Brightness UP' -u low"
-bindsym XF86MonBrightnessDown   exec --no-startup-id light -U 10 && notify-send 'Brightness DOWN' -u low"
+bindsym XF86MonBrightnessUp     exec --no-startup-id light -A 10 && notify-send 'Brightness UP' -u low
+bindsym XF86MonBrightnessDown   exec --no-startup-id light -U 10 && notify-send 'Brightness DOWN' -u low
 
 # screenshot
-bindsym Print exec --no-startup-id "flameshot gui -p $HOME/Pictures"
+bindsym Print exec --no-startup-id flameshot gui -p $HOME/Pictures
 
 #: }}}
 
