--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -11,7 +11,7 @@
 
 #: To get a full list of supported fonts use `kitty list-fonts`
 
-font_family         Iosevka Nerd Font
+font_family         Iosevka Slab
 bold_font           auto
 italic_font         auto
 bold_italic_font    auto
