--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -38,19 +38,16 @@ compositing-border = over
 ; ARGB color (e.g. #f00, #ff992a, #ddff1023)
 
 [colors]
-; UMBRA theme ------
-background = #100d23
-background-alt = #1e1d45
-foreground = #00ff9c
-foreground-alt = #918175
+background = #16161c
+background-alt = #232530
+foreground = #fadad1
+foreground-alt = #6c6f93
 
-primary = #9dff00
+primary = #29d398
 
-alert = #ff0049
-
-state_low = #009550
-state_mid = #fcec02
-state_hi = #ff0049
+state_good = #009550
+state_warn = #fcec02
+state_alert = #ff0049
 
 black = #000000
 white = #ffffff
@@ -124,7 +121,7 @@ padding = 0
 module-margin = 0
 
 ; font-N = <fontconfig pattern>;<vertical offset>
-font-0 = "Noto Sans:style=Regular:antialias=true:pixelsize=9;2"
+font-0 = "Roboto Condensed:style=Bold:antialias=true:pixelsize=9;2"
 font-1 = "Unifont:style=Regular:antialias=true:pixelsize=11;2"
 font-2 = "FontAwesome:style=Regular:antialias=true:pixelsize=11;2"
 
@@ -165,45 +162,6 @@ cursor-scroll = ns-resize
 
 ;}}}
 
-[bar/i3-secondary]
-;{{{
-
-monitor = HDMI-A-1
-bottom = false
-fixed-center = false
-width = 100%
-height = 20
-
-background = ${colors.background}
-foreground = ${colors.foreground}
-
-radius = 0.0
-
-line-size = 2
-line-color = #f00
-
-border-size =
-border-color =
-
-padding = 0
-
-module-margin = 0
-
-font-0 = "Noto Sans:style=Regular:antialias=true:pixelsize=9;2"
-font-1 = "Unifont:style=Regular:antialias=true:pixelsize=11;2"
-font-2 = "FontAwesome:style=Regular:antialias=true:pixelsize=11;2"
-
-modules-left = i3 xwindow
-modules-center =
-modules-right = wlan eth xkeyboard date
-
-separator =
-
-cursor-click = pointer
-cursor-scroll = ns-resize
-
-;}}}
-
 ;: }}}
 
 ; Modules {{{
@@ -231,17 +189,17 @@ label-volume =  %percentage%%
 
 label-muted =  muted
 label-muted-foreground = ${colors.background}
-label-muted-background = ${colors.alert}
+label-muted-background = ${colors.state_alert}
 label-muted-padding = 1
 
 bar-volume-width = 6
-bar-volume-foreground-0 = ${colors.state_low}
-bar-volume-foreground-1 = ${colors.state_low}
-bar-volume-foreground-2 = ${colors.state_low}
-bar-volume-foreground-3 = ${colors.state_low}
-bar-volume-foreground-4 = ${colors.state_low}
-bar-volume-foreground-5 = ${colors.state_mid}
-bar-volume-foreground-6 = ${colors.state_hi}
+bar-volume-foreground-0 = ${colors.state_good}
+bar-volume-foreground-1 = ${colors.state_good}
+bar-volume-foreground-2 = ${colors.state_good}
+bar-volume-foreground-3 = ${colors.state_good}
+bar-volume-foreground-4 = ${colors.state_good}
+bar-volume-foreground-5 = ${colors.state_good}
+bar-volume-foreground-6 = ${colors.state_alert}
 bar-volume-gradient = false
 bar-volume-indicator = █
 bar-volume-indicator-font = 0
@@ -288,22 +246,22 @@ label-charging = %percentage%%
 label-discharging = %percentage%%
 label-full = %percentage%%
 
-label-charging-foreground = ${colors.state_mid}
-label-discharging-foreground = ${colors.state_mid}
+label-charging-foreground = ${colors.state_warn}
+label-discharging-foreground = ${colors.state_warn}
 
 ramp-capacity-0 = 
 ramp-capacity-1 = 
 ramp-capacity-2 = 
 ramp-capacity-3 = 
 ramp-capacity-4 = 
-ramp-capacity-foreground = ${colors.state_low}
+ramp-capacity-foreground = ${colors.state_good}
 
 animation-charging-0 = 
 animation-charging-1 = 
 animation-charging-2 = 
 animation-charging-3 = 
 animation-charging-4 = 
-animation-charging-foreground = ${colors.state_mid}
+animation-charging-foreground = ${colors.state_warn}
 animation-charging-framerate = 750
 
 animation-discharging-0 = 
@@ -311,7 +269,7 @@ animation-discharging-1 = 
 animation-discharging-2 = 
 animation-discharging-3 = 
 animation-discharging-4 = 
-animation-discharging-foreground = ${colors.state_mid}
+animation-discharging-foreground = ${colors.state_warn}
 animation-discharging-framerate = 750
 
 ;}}}
@@ -331,7 +289,7 @@ label-occupied = %index%
 label-occupied-padding = 2
 
 label-urgent = %index%!
-label-urgent-background = ${colors.alert}
+label-urgent-background = ${colors.state_alert}
 label-urgent-padding = 2
 
 label-empty = %index%
@@ -477,7 +435,7 @@ label-visible-padding = ${self.label-state-padding}
 label-visible-underline = ${self.label-focused-underline}
 
 label-urgent = %index%
-label-urgent-background = ${colors.alert}
+label-urgent-background = ${colors.state_alert}
 label-urgent-padding = ${self.label-state-padding}
 
 ; Separator in between workspaces
@@ -541,7 +499,7 @@ menu-0-0-padding = 2
 menu-0-0-exec = menu-open-1
 
 menu-0-1 = Power Off
-menu-0-1-background = ${colors.alert}
+menu-0-1-background = ${colors.state_alert}
 menu-0-1-foreground = ${colors.white}
 menu-0-1-padding = 2
 menu-0-1-exec = menu-open-2
@@ -557,7 +515,7 @@ menu-1-1-foreground = ${colors.black}
 menu-1-1-exec = sudo reboot
 
 menu-2-0 = Power Off
-menu-2-0-background = ${colors.alert}
+menu-2-0-background = ${colors.state_alert}
 menu-2-0-foreground = ${colors.white}
 menu-2-0-padding = 2
 menu-2-0-exec = sudo poweroff
@@ -582,7 +540,7 @@ label-volume-padding = ${self.format-volume-padding}
 
 label-muted =  muted
 label-muted-foreground = ${colors.white}
-label-muted-background = ${colors.alert}
+label-muted-background = ${colors.state_alert}
 label-muted-padding = ${self.format-volume-padding}
 
 ramp-volume-0 = 
@@ -590,13 +548,13 @@ ramp-volume-1 = 
 ramp-volume-2 = 
 
 bar-volume-width = 6
-bar-volume-foreground-0 = ${colors.state_low}
-bar-volume-foreground-1 = ${colors.state_low}
-bar-volume-foreground-2 = ${colors.state_low}
-bar-volume-foreground-3 = ${colors.state_low}
-bar-volume-foreground-4 = ${colors.state_low}
-bar-volume-foreground-5 = ${colors.state_mid}
-bar-volume-foreground-6 = ${colors.state_hi}
+bar-volume-foreground-0 = ${colors.state_good}
+bar-volume-foreground-1 = ${colors.state_good}
+bar-volume-foreground-2 = ${colors.state_good}
+bar-volume-foreground-3 = ${colors.state_good}
+bar-volume-foreground-4 = ${colors.state_good}
+bar-volume-foreground-5 = ${colors.state_warn}
+bar-volume-foreground-6 = ${colors.state_alert}
 bar-volume-empty = ━
 bar-volume-empty-foreground = ${colors.background-alt}
 bar-volume-fill = ━
@@ -624,11 +582,11 @@ format-padding = 2
 
 format-warn = <label-warn>
 format-warn-padding = 2
-format-warn-underline = ${colors.state_hi}
+format-warn-underline = ${colors.state_alert}
 
 label = %temperature-c%
 label-warn =  %temperature-c%
-label-warn-foreground = ${colors.state_hi}
+label-warn-foreground = ${colors.state_alert}
 
 ramp-0 = 
 ramp-1 = 
@@ -703,7 +661,7 @@ format-prefix = " "
 label-layout = %name%
 
 label-indicator-foreground = ${colors.white}
-label-indicator-background = ${colors.alert}
+label-indicator-background = ${colors.state_alert}
 label-indicator-padding = 2
 
 ;}}}
