--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -603,7 +603,7 @@ ramp-4 = 
 type = internal/network
 ; Name of the network interface to display. You can get the names of the
 ; interfaces on your machine with `ip link`
-interface = wlp3s0
+interface = wlan0
 interval = 3.0
 
 format-connected = <label-connected> <ramp-signal>
