--- a/.config/i3/config
+++ b/.config/i3/config
@@ -414,8 +414,10 @@ bindsym XF86AudioPrev exec dbus-send --print-reply --dest=org.mpris.MediaPlayer2
 #: Misc {{{
 
 # backlight
-bindsym XF86MonBrightnessUp     exec --no-startup-id xbacklight -inc 10 && notify-send 'Brightness UP' -u low
-bindsym XF86MonBrightnessDown   exec --no-startup-id xbacklight -dec 10 && notify-send 'Brightness DOWN' -u low
+# bindsym XF86MonBrightnessUp     exec --no-startup-id xbacklight -inc 10 && notify-send 'Brightness UP' -u low
+# bindsym XF86MonBrightnessDown   exec --no-startup-id xbacklight -dec 10 && notify-send 'Brightness DOWN' -u low
+bindsym XF86MonBrightnessUp     exec --no-startup-id light -A 10 && notify-send 'Brightness UP' -u low
+bindsym XF86MonBrightnessDown   exec --no-startup-id light -U 10 && notify-send 'Brightness DOWN' -u low
 
 # screenshot
 bindsym Print exec --no-startup-id flameshot gui -p $HOME/Pictures
