--- a/.config/i3/config
+++ b/.config/i3/config
@@ -24,6 +24,9 @@ exec --no-startup-id /usr/bin/dunst
 # network manager
 exec --no-startup-id nm-applet
 
+# keyboard layouts
+exec --no-startup-id setxkbmap -layout gb,us,th -option "grp:alt_shift_toggle""
+
 # make numlock active
 exec --no-startup-id numlockx on
 
@@ -124,9 +127,6 @@ bindsym $mod+shift+backslash exec --no-startup-id ~/bin/lockscreen
 #: }}}
 
 #: Input configuration {{{
-
-# keyboard layouts
-exec --no-startup-id setxkbmap -layout gb,us,th -option grp:alt_shift_toggle
 
 # thinkpad trackpoint
 exec --no-startup-id xinput set-prop "TPPS/2 IBM TrackPoint" "Device Enabled" 1
