--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -66,7 +66,7 @@ white = #ffffff
 ; $ polybar -m | cut -d ':' -f 1
 ; $ xrandr -q | grep " connected" | cut -d ' ' -f1
 ; If no monitor is given, the primary monitor is used if it exists
-monitor =
+monitor = ${env:MONITOR:}
 
 ; Put the bar at the bottom of the screen
 bottom = false
