Use bemenu instead

--- a/.config/networkmanager-dmenu/config.ini
+++ b/.config/networkmanager-dmenu/config.ini
@@ -1,5 +1,6 @@
 [dmenu]
-dmenu_command = /usr/bin/dmenu -i -fn 'Roboto Condensed-10:Bold' -nb '#16161c' -nf '#fdf0ed' -sb '#29d398' -sf '#16161c'
+# dmenu_command = /usr/bin/dmenu -i -fn 'Roboto Condensed-10:Bold' -nb '#16161c' -nf '#fdf0ed' -sb '#29d398' -sf '#16161c'
+dmenu_command = /usr/bin/bemenu -i -p ">" --fn 'RobotoCondensed Regular 13' --tb '#232530' --tf '#09f7a0' --fb '#16161c' --ff '#09f7a0' --nb '#16161c' --nf '#fdf0ed' --hb '#09f7a0' --hf '#16161c' --sb '#09f7a0' --sf '#16161c'
 # # Note that dmenu_command can contain arguments as well like:
 # # `dmenu_command = rofi -dmenu -i -theme nmdm`
 # # `dmenu_command = rofi -dmenu -width 30 -i`
