Replace duplicated clamshell setting with external monitor detect script

--- a/.config/sway/config
+++ b/.config/sway/config
@@ -27,8 +27,8 @@ exec_always --no-startup-id /usr/bin/autotiling
 # import gsettings
 exec_always --no-startup-id ~/bin/import-gsettings
 
-# clamshell detect
-exec_always --no-startup-id ~/bin/sway_clamshell
+# detect external monitor
+exec_always --no-startup-id ~/bin/mon_detect
 
 #: }}}
 
