Use short format instead

--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -26,7 +26,7 @@
     },
 
     "sway/language": {
-        "format": "{long}",
+        "format": "{short}",
         "on-click": "swaymsg input type:keyboard xkb_switch_layout next",
         "tooltip": false
     },
