--- a/.config/sway/config
+++ b/.config/sway/config
@@ -151,7 +151,7 @@ bindswitch --reload --locked lid:off output $laptop enable
 input "type:keyboard" {
   repeat_delay 300
   repeat_rate 30
-  xkb_layout "us,th"
+  xkb_layout "us,gb,th"
   xkb_options "grp:alt_shift_toggle"
 }
 
@@ -170,10 +170,10 @@ input "2:7:SynPS/2_Synaptics_TouchPad" {
   middle_emulation enabled
 }
 
-input "1:1:AT_Translated_Set_2_keyboard" {
-  xkb_layout "gb,th"
-  xkb_options "grp:alt_shift_toggle"
-}
+# input "1:1:AT_Translated_Set_2_keyboard" {
+#   xkb_layout "gb,th"
+#   xkb_options "grp:alt_shift_toggle"
+# }
 
 input "1133:16489:Logitech_MX_Master_2S" {
   accel_profile adaptive
