--- a/.config/sway/config
+++ b/.config/sway/config
@@ -160,6 +160,7 @@ input "2:10:TPPS/2_IBM_TrackPoint" {
   tap enabled
   natural_scroll enabled
   middle_emulation enabled
+  scroll_factor 0.5
 }
 
 input "2:7:SynPS/2_Synaptics_TouchPad" {
