Remove external monitor script which cause endless loop when reload

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -25,15 +25,12 @@ exec --no-startup-id /usr/bin/dunst
 exec --no-startup-id /usr/bin/nm-applet
 
 # make numlock active
-exec --no-startup-id numlockx on
+# exec --no-startup-id numlockx on
 
 exec_always --no-startup-id /usr/bin/xrdb -load $HOME/.Xresources
 
 # autotiling
 exec_always --no-startup-id /usr/bin/autotiling
-
-# clamshell detect
-exec_always --no-startup-id $HOME/bin/i3_clamshell
 
 # polybar
 exec_always --no-startup-id $HOME/.config/polybar/launch.sh
