--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -11,14 +11,14 @@
 
 #: To get a full list of supported fonts use `kitty list-fonts`
 
-font_family         Iosevka Slab
+font_family         JetBrains Mono
 bold_font           auto
 italic_font         auto
 bold_italic_font    auto
 
 #: Font size (in pts)
 
-font_size 12
+font_size 13
 
 force_ltr yes
 
