--- a/.config/sway/config
+++ b/.config/sway/config
@@ -455,7 +455,7 @@ bindsym XF86MonBrightnessUp     exec --no-startup-id light -A 10 && notify-send 
 bindsym XF86MonBrightnessDown   exec --no-startup-id light -U 10 && notify-send 'Brightness DOWN' -u low
 
 # screenshot
-bindsym Print exec --no-startup-id flameshot gui -p $HOME/Pictures
+bindsym Print exec --no-startup-id grim -g "$(slurp)"
 
 #: }}}
 
