Update application setting for KeePassXC

--- a/.config/sway/config
+++ b/.config/sway/config
@@ -492,7 +492,7 @@ assign [class="(?i)(?:firefox)"] \
 for_window [class="(?i)(?:spotify)"] \
   move --no-auto-back-and-forth to workspace number $ws10
 
-for_window [app_id="(?i)(?:keepassxc)"] \
+for_window [class="(?i)(?:KeePassXC)"] \
   move --no-auto-back-and-forth to workspace number $ws10
 
 for_window [app_id="(?i)(?:telegram)"] \
