--- a/.config/sway/config
+++ b/.config/sway/config
@@ -517,6 +517,8 @@ for_window [window_role="(?i)(?:about|pop-up|setup)"] \
 
 for_window [title="Android Emulator"] \
   floating enable
+for_window [class="(?i)(?:jetbrains-*)"] \
+  floating enable
 # GOG installer
 for_window [class="(?i)(?:mojosetup)"] \
   floating enable
