Adjust MX master input settings

--- a/.config/sway/config
+++ b/.config/sway/config
@@ -183,9 +183,11 @@ input "2:7:SynPS/2_Synaptics_TouchPad" {
 # }
 
 input "1133:16489:Logitech_MX_Master_2S" {
-  accel_profile adaptive
+  accel_profile "adaptive"
   dwt enabled
   natural_scroll enabled
+  pointer_accel -0.9
+  scroll_factor 2
 }
 
 #: }}}
