Change colorscheme to synthwave colorscheme

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -378,7 +378,7 @@ tab_bar_background none
 
 #: Color Scheme {{{
 
-cursor #cccccc
+cursor #19cde6
 
 #: Choose the color of text under the cursor. If you want it rendered
 #: with the background color of the cell underneath instead, use the
@@ -386,7 +386,7 @@ cursor #cccccc
 
 cursor_text_color #111111
 
-foreground #dddddd
+foreground #dad9c7
 background #000000
 
 #: The opacity of the background. A number between 0 and 1, where 1 is
@@ -448,7 +448,7 @@ selection_foreground #000000
 
 #: The background for text selected with mouse.
 
-selection_background #fffacd
+selection_background #19cde6
 
 #: The 16 terminal colors. There are 8 basic colors, each color has a
 #: dull and bright version. You can also set the remaining colors from
@@ -456,34 +456,34 @@ selection_background #fffacd
 
 #: black
 color0  #000000
-color8  #767676
+color8  #2e3032
 
 #: red
-color1  #cc0403
-color9  #f2201f
+color1  #f6188f
+color9  #f841a0
 
 #: green
-color2  #19cb00
-color10 #23fd00
+color2  #1ebb2b
+color10 #25c141
 
 #: yellow
-color3  #cecb00
-color11 #fffd00
+color3  #fdf834
+color11 #fdf454
 
 #: blue
-color4  #0d73cc
-color12 #1a8fff
+color4  #2186ec
+color12 #2f9ded
 
 #: magenta
-color5  #cb1ed1
-color13 #fd28ff
+color5  #f85a21
+color13 #f97137
 
 #: cyan
-color6  #0dcdcd
-color14 #14ffff
+color6  #12c3e2
+color14 #19cde6
 
 #: white
-color7  #dddddd
+color7  #ffffff
 color15 #ffffff
 
 #: Color for marks of type 1
