Set window size to 80x24c

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -187,8 +187,8 @@ command_on_bell none
 #: of cells instead of pixels.
 
 remember_window_size  yes
-initial_window_width  640
-initial_window_height 400
+initial_window_width  80c
+initial_window_height 24c
 
 #: The enabled window layouts. A comma separated list of layout names.
 #: The special value all means all layouts. The first listed layout
