--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -125,12 +125,12 @@
 
     "network": {
         // "interface": "wlp2*", // (Optional) To force the use of this interface
+        "format-disconnected": " Disconnected",
         "format-wifi": " {essid} ({signalStrength}%)",
         "format-ethernet": "{ipaddr}/{cidr} ",
-        "tooltip-format": "{ifname} via {gwaddr} ",
         "format-linked": "{ifname} (No IP) ",
-        "format-disconnected": " Disconnected",
-        "format-alt": "{ifname}: {ipaddr}/{cidr}"
+        "format-alt": "{ifname}: {ipaddr}/{cidr}",
+        "tooltip-format": "{ifname} via {gwaddr} "
     },
 
     "pulseaudio": {
