Disable IPC for better battery life

--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -12,4 +12,6 @@ preload = ~/.wallpaper.jpg
 
 wallpaper = eDP-1,~/.wallpaper.jpg
 
+ipc = off
+
 # vim:fileencoding=utf-8:ft=conf:foldmethod=marker
