--- a/.config/sway/config
+++ b/.config/sway/config
@@ -169,6 +169,14 @@ input "2:10:TPPS/2_IBM_TrackPoint" {
   scroll_factor 0.5
 }
 
+input "1267:32:Elan_TrackPoint" {
+  dwt enabled
+  tap enabled
+  natural_scroll enabled
+  middle_emulation disabled
+  scroll_factor 0.5
+}
+
 input "2:7:SynPS/2_Synaptics_TouchPad" {
   events disabled
   dwt enabled
@@ -177,10 +185,13 @@ input "2:7:SynPS/2_Synaptics_TouchPad" {
   middle_emulation enabled
 }
 
-# input "1:1:AT_Translated_Set_2_keyboard" {
-#   xkb_layout "gb,th"
-#   xkb_options "grp:alt_shift_toggle"
-# }
+input "1267:32:Elan_Touchpad" {
+  events enabled
+  dwt enabled
+  tap disabled
+  natural_scroll enabled
+  middle_emulation enabled
+}
 
 input "1133:16489:Logitech_MX_Master_2S" {
   accel_profile "adaptive"
