Update window and layout related keybinds

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -225,12 +225,6 @@ bind = $mainMod, L,     movefocus, r
 bind = $mainMod, K,     movefocus, u
 bind = $mainMod, J,     movefocus, d
 
-# Move focused window
-bind = $mainMod SHIFT, H,   movewindow, l
-bind = $mainMod SHIFT, L,   movewindow, r
-bind = $mainMod SHIFT, K,   movewindow, u
-bind = $mainMod SHIFT, J,   movewindow, d
-
 #: }}}
 
 #: Workspaces {{{
@@ -265,17 +259,53 @@ bind = $mainMod, mouse_up, workspace, e-1
 
 #: }}}
 
-#: Layouts {{{
+#: Windows {{{
 
-bind = $mainMod, V, togglefloating,
-bind = $mainMod, P, pseudo, # dwindle
-# bind = $mainMod, J, togglesplit, # dwindle
+# Move active window
+bind = $mainMod SHIFT, H,   movewindow, l
+bind = $mainMod SHIFT, L,   movewindow, r
+bind = $mainMod SHIFT, K,   movewindow, u
+bind = $mainMod SHIFT, J,   movewindow, d
 
-#: }}}
+# Resize active window (mode)
+bind = ALT, R, submap, resizemode
+submap = resizemode
+binde = , H, resizeactive, -10 0
+binde = , L, resizeactive, 10 0
+binde = , K, resizeactive, 0 -10
+binde = , J, resizeactive, 0 10
+bind = , ESCAPE, submap, reset
+submap = reset
+
+# Resize active window (mode)
+bind = ALT, M, submap, movemode
+submap = movemode
+binde = , H, moveactive, -10 0
+binde = , L, moveactive, 10 0
+binde = , K, moveactive, 0 -10
+binde = , J, moveactive, 0 10
+bind = , ESCAPE, submap, reset
+submap = reset
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
+
+#: }}}
+
+#: Layouts {{{
+
+# Switch between layouts
+# bind = $mainMod, P, pseudo, # dwindle
+# bind = $mainMod, J, togglesplit, # dwindle
+
+# Toggle focussed window fullscreen
+bind = $mainMod, F, fullscreen,
+
+# Toggle focussed window between tiling / floating
+bind = $mainMod SHIFT, Space, togglefloating,
+
+#: }}}
 
 #: Media control {{{
 
