--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -345,6 +345,8 @@ bind = ,Print, exec, grim -g "$(slurp)"
 
 windowrule = float, ^(kitty)$
 windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
+windowrulev2 = workspace 1,class:^(firefox)$
+windowrulev2 = workspace 9,class:^(org.telegram.desktop)$
 
 #: }}}
 
