--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -1,12 +1,18 @@
 {
-    "layer": "bottom",
-    // List output from command line using `swaymsg -t get_output`
+    "layer": "top",
+    // List output from command line using:
+    // Hyprland: `hyprctl monitors`
+    // Sway: `swaymsg -t get_outputs`
     "output": ["LVDS-1", "HDMI-A-1", "DP-2"],
     "height": 24,
     "position": "top",
-    "modules-left": ["sway/workspaces", "sway/mode", "sway/window"],
+    "modules-left": ["wlr/workspaces", "hyprland/submap", "hyprland/window"],
     "modules-center": [],
-    "modules-right": ["idle_inhibitor", "cpu", "memory", "temperature", "pulseaudio", "network", "backlight", "battery", "sway/language", "keyboard-state", "clock", "tray"],
+    "modules-right": ["idle_inhibitor", "cpu", "memory", "temperature", "pulseaudio", "network", "backlight", "battery", "hyprland/language", "keyboard-state", "clock", "tray"],
+
+    "hyprland/submap": {
+        "format": "<span style=\"italic\">{}</span>"
+    },
 
     "sway/mode": {
         "format": "<span style=\"italic\">{}</span>"
@@ -23,6 +29,17 @@
         "all-outputs": false,
         "disable-scroll": true,
         "format": "{name}"
+    },
+
+    "wlr/workspaces": {
+        "all-outputs": false,
+        "disable-scroll": true,
+        "format": "{name}"
+    },
+
+    "hyprland/language": {
+        "format": "{}",
+        "keyboard-name": "at-translated-set-2-keyboard",
     },
 
     "sway/language": {
