Replace bemenu with tofi as launcher

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -40,14 +40,7 @@ $indicator-color =      '#fab28e'
 $mainMod = SUPER
 $term = alacritty
 $filemanager = pcmanfm
-$menu = bemenu-run -i -p "run >" \
-  --fn 'RobotoCondensed Regular 13' \
-  --tb $inactive-bg-color --tf $active-bg-color \
-  --fb $bg-color --ff $active-bg-color \
-  --nb $bg-color --nf $text-color \
-  --hb $active-bg-color --hf $active-text-color \
-  --sb $active-bg-color --sf $active-text-color \
-  | xargs swaymsg exec --
+$menu = tofi-drun | xargs hyprctl dispatch exec --
 
 #: }}}
 
