Add laptop lid switch bindings

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -324,6 +324,10 @@ bind = ,XF86MonBrightnessDown, exec, light -U 10 && notify-send 'Brightness DOWN
 # screenshot
 bind = ,Print, exec, grim -g "$(slurp)"
 
+# laptop lid switch
+bindl = ,switch:on:Lid Switch, exec, hyprctl keyword monitor "eDP-1, 1920x1080, 1920,0, 1"
+bindl = ,switch:off:Lid Switch, exec, hyprctl keyword monitor "eDP-1, disable"
+
 #: }}}
 
 #: }}}
