Add pin active float binding

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -260,6 +260,9 @@ bind = $mainMod SHIFT, L,   movewindow, r
 bind = $mainMod SHIFT, K,   movewindow, u
 bind = $mainMod SHIFT, J,   movewindow, d
 
+# Pin active floating window
+bind = ALT, BACKSLASH, pin
+
 # Resize active window (mode)
 bind = ALT, R, submap, resizemode
 submap = resizemode
