Assign feather wallet to workspace 9

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -347,6 +347,7 @@ windowrule = float, ^(kitty)$
 windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 windowrulev2 = workspace 1,class:^(firefox)$
 windowrulev2 = workspace 9,class:^(org.telegram.desktop)$
+windowrulev2 = workspace 9,class:^(FeatherWallet)$
 
 #: }}}
 
