--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -40,7 +40,7 @@ $indicator-color =      '#fab28e'
 $mainMod = SUPER
 $term = alacritty
 $filemanager = pcmanfm
-$menu = tofi-drun | xargs hyprctl dispatch exec --
+$menu = tofi-run | xargs hyprctl dispatch exec --
 
 #: }}}
 
