Add Misc section, disable Hyprland logo

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -176,6 +176,15 @@ gestures {
 
 #: }}}
 
+#: Misc {{{
+
+misc {
+    disable_hyprland_logo = true
+    disable_splash_rendering = true
+}
+
+#: }}}
+
 #: Binds {{{
 
 # see https://wiki.hyprland.org/Configuring/Binds/ for more
