Update Window Rules

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -352,11 +352,20 @@ bindl = ,switch:off:Lid Switch, exec, hyprctl keyword monitor "eDP-1, disable"
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 
+windowrule = float, yad|nm-connection-editor|pavucontrol
 windowrule = float, ^(kitty)$
-windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
-windowrulev2 = workspace 1,class:^(firefox)$
-windowrulev2 = workspace 9,class:^(org.telegram.desktop)$
-windowrulev2 = workspace 9,class:^(FeatherWallet)$
+windowrule = size 50% 50%, ^(kitty)$
+windowrule = move 25% 25%, ^(kitty)$
+windowrule = animation slide, ^(kitty)$
+windowrule = float, ^(Authy Desktop)$
+windowrule = animation slide, ^(Authy Desktop)$
+windowrulev2 = workspace 1, class:^(firefox)$
+windowrule = noblur, ^(firefox)$
+windowrule = size 50% 50%, ^(kitty)$
+windowrule = size 50% 50%, ^(Brave-browser)$
+windowrule = noblur, ^(Brave-browser)$
+windowrulev2 = workspace 9, class:^(org.telegram.desktop)$
+windowrulev2 = workspace 9, class:^(FeatherWallet)$
 
 #: }}}
 
