Add comment header

--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -13,6 +13,7 @@ preload = ~/.wallpaper.jpg
 wallpaper = eDP-1,~/.wallpaper.jpg
 wallpaper = DP-1,~/.wallpaper.jpg
 
+# IPC is disabled for better battery life
 ipc = off
 
 # vim:fileencoding=utf-8:ft=conf:foldmethod=marker
