Change single quotes to double quotes

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -28,14 +28,14 @@ exec-once = waybar & hyprpaper
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 # bar and window color
-$bg-color =             '#16161c'
-$text-color =           '#fdf0ed'
-$active-bg-color =      '#09f7a0'
-$active-text-color =    '#16161c'
-$inactive-bg-color =    '#232530'
-$inactive-text-color =  '#6c6f93'
-$urgent-bg-color =      '#f43e5c'
-$indicator-color =      '#fab28e'
+$bg-color =             "#16161c"
+$text-color =           "#fdf0ed"
+$active-bg-color =      "#09f7a0"
+$active-text-color =    "#16161c"
+$inactive-bg-color =    "#232530"
+$inactive-text-color =  "#6c6f93"
+$urgent-bg-color =      "#f43e5c"
+$indicator-color =      "#fab28e"
 
 $mainMod = SUPER
 $term = alacritty
