Add keybind to swap workspace between monitors

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -38,6 +38,10 @@ $urgent-bg-color =      "#f43e5c"
 $indicator-color =      "#fab28e"
 
 $mainMod = SUPER
+
+$monitor1 = eDP-1
+$monitor2 = DP-1
+
 $term = alacritty
 $filemanager = pcmanfm
 $menu = tofi-run | xargs hyprctl dispatch exec --
@@ -254,6 +258,9 @@ bind = $mainMod SHIFT, 7, movetoworkspace, 7
 bind = $mainMod SHIFT, 8, movetoworkspace, 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
+
+# Swap active workspace between two monitors
+bind = $mainMod ALT, S, swapactiveworkspaces, $monitor1 $monitor2
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
