Add alternate launcher keybind

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -44,7 +44,9 @@ $monitor2 = DP-1
 
 $term = alacritty
 $filemanager = pcmanfm
+
 $menu = tofi-run | xargs hyprctl dispatch exec --
+$menu-alt = tofi-drun | xargs hyprctl dispatch exec --
 
 #: }}}
 
@@ -211,6 +213,7 @@ bind = $mainMod SHIFT, Q, killactive,
 
 # launcher
 bind = $mainMod, D, exec, $menu
+bind = $mainMod SHIFT, D, exec, $menu-alt
 
 # exit hyprland
 bind = $mainMod SHIFT, E, exit,
