Change image capture directory

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -344,7 +344,7 @@ bind = ,XF86MonBrightnessUp, exec, light -A 10 && notify-send 'Brightness UP' -u
 bind = ,XF86MonBrightnessDown, exec, light -U 10 && notify-send 'Brightness DOWN' -u low
 
 # screenshot
-bind = ,Print, exec, grim -g "$(slurp)"
+bind = ,Print, exec, grim -g "$(slurp)" $(xdg-user-dir)/Captures/$(date +'%s_grim.png')
 
 # laptop lid switch
 bindl = ,switch:on:Lid Switch, exec, hyprctl keyword monitor "eDP-1, 1920x1080, 1920,0, 1"
