--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -45,8 +45,8 @@ $monitor2 = DP-1
 $term = alacritty
 $filemanager = pcmanfm
 
-$menu = tofi-run | xargs hyprctl dispatch exec --
-$menu-alt = tofi-drun | xargs hyprctl dispatch exec --
+$menu = tofi-drun | xargs hyprctl dispatch exec --
+$menu-alt = tofi-run | xargs hyprctl dispatch exec --
 
 #: }}}
 
@@ -213,7 +213,7 @@ bind = $mainMod SHIFT, Q, killactive,
 
 # launcher
 bind = $mainMod, D, exec, $menu
-bind = $mainMod SHIFT, D, exec, $menu-alt
+bind = $mainMod ALT, D, exec, $menu-alt
 
 # exit hyprland
 bind = $mainMod SHIFT, E, exit,
